Revert "fix: RG-2155 Text with symbols overflow tab #RG-2155 fix [publish]"
This reverts commit 596f758ba763124a68bed9699cc49c2747685438.

--- a/components/tabs/tabs.css
+++ b/components/tabs/tabs.css
@@ -115,7 +115,6 @@
 .hidden {
   visibility: hidden;
 
-  font-family: monospace;
   font-weight: bold;
 }
 
